--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,13 @@ edition = "2021"
 rayon = "1.7.0"
 
 [dependencies.pyo3]
-version = "0.13.2"
+version = "0.20.0"
 features = ["extension-module"]
 
 
 [lib]
 name = "distance_functions"
 crate-type = ["cdylib"]
+
+[build-dependencies]
+pyo3-build-config = { git = "https://github.com/pyo3/pyo3", features = ["resolve-config"] }
